--- a/src/app/pages/attendance/masters/templates/shiftdetail/shiftdetail-add.html
+++ b/src/app/pages/attendance/masters/templates/shiftdetail/shiftdetail-add.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!--<div class="row">
     <div class="col-md-12">
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
@@ -233,4 +233,4 @@
         </form>
 
     </div>
-</div>
+</div>-->
