--- a/src/app/pages/attendance/transaction/manual/attendance.manual.html
+++ b/src/app/pages/attendance/transaction/manual/attendance.manual.html
@@ -1,7 +1,7 @@
 <grid-box ng-model="page" ng-hide="showEditForm">
 </grid-box>
-test
-<form name="editForm" novalidate ng-submit="saveForm(editForm)" ng-show="showEditForm">
+
+<!--<form name="editForm" novalidate ng-submit="saveForm(editForm)" ng-show="showEditForm">
     <div class="panel panel-default xmedium-panel">
         <edit-panel-head page-title="page.pageinfo.title" reset-form="resetFormCommon(editForm)" clear-form="clearFormCommon(editForm)"
             close-form="closeForm(editForm)" show-close="true" show-save="true" show-clear="true" show-list="false" show-reset="true"
@@ -98,4 +98,4 @@ test
         </div>
     </div>
 
-</form>
+</form>-->
