--- a/src/app/pages/attendance/transaction/verify/attendance.verify.html
+++ b/src/app/pages/attendance/transaction/verify/attendance.verify.html
@@ -1,10 +1,2 @@
-<div class="row">
-    <div class="col-md-3" ng-show="page.showFilter" style="padding-right:0px; margin-right:0px;  ">
-        <filter-box page="page"></filter-box>
-    </div>
-    <div ng-class="{'col-md-12':!page.showFilter, 'col-md-9':page.showFilter}" style="padding-left:0px; margin-left:0px;">
-        <grid-box page="page" box-options="boxSetting">
-        </grid-box>
-    </div>
-</div>
-
+<grid-box ng-model="page" >
+</grid-box>
