--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -95,13 +95,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-body" ng-scrollbars ng-scrollbars-config="config">
+                    <div class="panel-body">
                         <div class="row">
-                            <div ng-class="{'col-md-7':page.isVerticalForm,'col-md-12':!page.isVerticalForm}" style="min-height: 550px;">
+                            <div ng-class="{'col-md-7':page.isVerticalForm,'col-md-12':!page.isVerticalForm}">
                                 <div class="form-group" ng-repeat="col in page.formrows">
                                     <label for="inputPassword3" class="col-sm-5 control-label">{{col.text}}</label>
                                     <div class="col-md-7" ng-switch="col.type"> 
                                         <field-box ng-column="col" ng-entity="entity" form="editForm"></field-box>
+
                                     </div>
                                 </div>
                             </div>
