--- a/src/app/common/components/panelHead/panelHead.html
+++ b/src/app/common/components/panelHead/panelHead.html
@@ -6,20 +6,19 @@
         </div>
         <div class="col-md-7" style="padding-top:5px">
             <div class="pull-right" ng-show="ngCondition">
-<<<<<<< HEAD
-                
+<!--
                 <button type="submit"  class="btn btn-sm btn-primary" >Save</button>
                 <button type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
                 <button type="button" class="btn btn-sm btn-danger" ng-click="clearForm()">Clear</button>
-                 <button type="button" class="btn btn-sm btn-primary" ng-click="employeeList()">List</button>
-=======
+                 <button type="button" class="btn btn-sm btn-primary" ng-click="employeeList()">List</button>-->
+
 
                 <button ng-show="showSave" type="submit" class="btn btn-sm btn-primary">Save</button>
                 <button ng-show="showReset" type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
                 <button ng-show="showClear" type="button" class="btn btn-sm btn-info" ng-click="clearForm()">Clear</button>
                 <button ng-show="showClose" type="button" class="btn btn-sm btn-danger" ng-click="closeForm()">Close</button>
                 <button ng-show="showList" type="button" class="btn btn-sm btn-primary" ng-click="openList()">List</button>
->>>>>>> 9e18807553ad81c6555d56a1e57a5901b92f2201
+
             </div>
         </div>
     </div>
