--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -1,6 +1,9 @@
 <form ng-submit="empTabCtrl.saveFormCommon()" name="editForm" novalidate>
   <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
-    <edit-panel-head page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon()"  clear-form="empTabCtrl.clearFormCommon()"
+    <edit-panel-head page-title="page.pageinfo.title" 
+    reset-form="empTabCtrl.resetFormCommon()" 
+     clear-form="empTabCtrl.clearFormCommon()"
+     open-List="empTabCtrl.goToEmployeeList()"
       condition="(true)"></edit-panel-head>
     <div class="panel-body" style="padding:5px;" ng-scrollbars ng-scrollbars-config="config">
       <div style="min-height: 450px;">
