--- a/src/app/pages/leave/masters/list/mastersList.html
+++ b/src/app/pages/leave/masters/list/mastersList.html
@@ -89,7 +89,7 @@
 
             <div class="row">
                 <div class="form-group col-md-4">
-                    <label for="inputPassword3">{{page.pageinfo.fields.LCROnCalendarYear.text}}</label>
+                    <label for="inputPassword3" clas>{{page.pageinfo.fields.LCROnCalendarYear.text}}</label>
                     <input type="radio" name="commonRedio" ng-model="yearRange" value="calc">
                     <!--<field-box ng-column="page.pageinfo.fields.LCROnCalendarYear" ng-entity="entity" form="editForm"></field-box>-->
                 </div>
@@ -142,8 +142,8 @@
                     <field-box ng-column="page.pageinfo.fields.LCRIsLeaveEncashable" ng-entity="entity" form="editForm"></field-box>
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="inputPassword3">{{page.pageinfo.fields.LCRIsBreakUpLeave.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.LCRIsBreakUpLeave" ng-entity="entity" form="editForm"></field-box>
+                    <label for="inputPassword3">{{page.pageinfo.fields.LCRIsSandwichLeave.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.LCRIsSandwichLeave" ng-entity="entity" form="editForm"></field-box>
                 </div>
 
             </div>
