--- a/src/app/pages/attendance/transaction/compoffapply/attendance.compoffApply.html
+++ b/src/app/pages/attendance/transaction/compoffapply/attendance.compoffApply.html
@@ -1,10 +1,69 @@
-<div class="row">
-    <div class="col-md-3" ng-show="page.showFilter" style="padding-right:0px; margin-right:0px;  ">
-        <filter-box page="page"></filter-box>
-    </div>
-    <div ng-class="{'col-md-12':!page.showFilter, 'col-md-9':page.showFilter}" style="padding-left:0px; margin-left:0px;">
-        <grid-box page="page" box-options="boxSetting">
-        </grid-box>
-    </div>
-</div>
+<grid-box ng-model="page" ng-hide="showEditForm">
+</grid-box>
+<form name="editForm" novalidate ng-submit="saveForm(editForm)" ng-show="showEditForm" >
+    <div class="panel panel-default xmedium-panel">
+        <edit-panel-head page-title="page.pageinfo.title" reset-form="resetFormCommon(editForm)" clear-form="clearFormCommon(editForm)"
+            close-form="closeForm(editForm)" show-close="true" show-save="true" show-clear="true" show-list="false" show-reset="true"
+            condition="true"></edit-panel-head>
 
+           <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
+
+
+            <div class="row">
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.EmpId.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.EmpId" ng-entity="entity" form="editForm"></field-box>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.COAttnDate.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.COAttnDate" ng-entity="entity" form="editForm"></field-box>
+               
+                </div>
+                 <div class="form-group col-md-3">
+                 </div>
+                  <div class="form-group col-md-3">
+                 </div>
+              
+            </div>       
+
+
+             <div class="row">
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.COTimeIn.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.COTimeIn" ng-entity="entity" form="editForm"></field-box>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.COTimeOut.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.COTimeOut" ng-entity="entity" form="editForm"></field-box>
+                </div>
+                 <div class="form-group col-md-3">
+                 </div>
+                  <div class="form-group col-md-3">
+                 </div>
+               
+            </div>
+
+
+            <div class="row">
+                <div class="form-group col-md-3">
+                  
+                    <label for="inputPassword3">{{page.pageinfo.fields.COTotalWrTmInHour.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.COTotalWrTmInHour" ng-entity="entity" form="editForm"></field-box>
+               
+
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.COReson.text}}</label>
+                    <field-box ng-column="page.pageinfo.fields.COReson" ng-entity="entity" form="editForm"></field-box>
+               
+
+                 </div>
+                  <div class="form-group col-md-3">
+                 </div>
+                  <div class="form-group col-md-3">
+                 </div>
+               
+            </div>
+
+
+</form>
