--- a/src/app/common/components/filterBox/filterBox.html
+++ b/src/app/common/components/filterBox/filterBox.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default bootstrap-panel xmedium-panel">
+<div class="panel panel-default bootstrap-panel xmedium-panel side-filters">
     <div class="panel-heading panHead">
         <div class="row" ng-hide="showSearchFilter">
             <div class="col-md-9">Filter data by</div>
@@ -22,7 +22,7 @@
     <div class="panel-body" style="overflow: scroll">
 
         <ul class="list-unstyled filters filter-panel">
-            <li ng-repeat="filter in page.pageinfo.filters|filter: {displayName: filterSearchText}" ng-init="filter.selectedOpt='='">
+            <li ng-repeat="filter in page.pageinfo.filters|filter: {displayName: filterSearchText}">
                 <label class="checkbox-inline custom-checkbox nowrap">
                             <input type="checkbox" id="inlineCheckbox01" ng-model="filter.showFilter">
                             <span>{{filter.displayName}}</span>
@@ -49,18 +49,84 @@
                         </div>
                         <div ng-switch-when="datepicker">
                             <div class="row">
-                                <label class="radio-inline custom-radio nowrap">
-                                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="date" checked>
-                                    <span>Date</span>
-                                </label>
+                                <div class="col-md-12">
                                     <label class="radio-inline custom-radio nowrap">
-                                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="monthly">
-                                    <span>Monthly</span>
-                                </label>
+                                        <input type="radio" name="{{filter.name}}" id="inlineRadio1" value="day" checked 
+                                        ng-model="filter.datePicker.option1.minMode" 
+                                        ng-click="dateModeChanged(filter)">
+                                        <span>Date</span>
+                                    </label>
                                     <label class="radio-inline custom-radio nowrap">
-                                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="yearly">
-                                    <span>Yearly</span>
-                                </label>
+                                        <input type="radio" name="{{filter.name}}" id="inlineRadio1" value="month" 
+                                        ng-model="filter.datePicker.option1.minMode" 
+                                        ng-click="dateModeChanged(filter)">
+                                        <span>Monthly</span>
+                                    </label>
+                                    <label class="radio-inline custom-radio nowrap">
+                                        <input type="radio" name="{{filter.name}}" id="inlineRadio1" value="year" 
+                                        ng-model="filter.datePicker.option1.minMode" 
+                                        ng-click="dateModeChanged(filter)">
+                                        <span>Yearly</span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div ng-show="filter.datePicker.option1.minMode">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <select ng-options="opt.value as opt.name for opt in filterOpt.date | filter:operatorFilter(filter)" ng-model="filter.operator"
+                                            ng-change="filterOperatorChange(filter)">
+                                    </select>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <label ng-show="filter.operator=='between'" for="inputPassword3" class="col-sm-2 control-label">From:</label>
+                                    <div class="col-md-12" ng-class="{'col-md-10':(filter.operator=='between'), 'col-md-12':(filter.operator!='between')}">
+                                        <input ng-click="filter.datePicker.opened1 = true" ng-readonly="true" type="text" uib-datepicker-popup="{{filter.datePicker.format}}"
+                                            ng-model="filter.value" is-open="filter.datePicker.opened1" datepicker-options="filter.datePicker.option1"
+                                            date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" alt-input-formats="altInputFormats"
+                                            datepicker-mode="{{filter.datePicker.option1.minMode}}" datepicker-append-to-body="true"
+                                            ng-change="firstDateChange(filter)" />
+                                    </div>
+                                </div>
+                                <!--show this box on between selection-->
+                                <div class="row" ng-show="filter.operator=='between'">
+                                    <label for="inputPassword3" class="col-sm-2 control-label">To:</label>
+                                    <div class="col-md-10">
+                                        <input ng-click="filter.datePicker.opened2 = true" ng-readonly="true" type="text" uib-datepicker-popup="{{filter.datePicker.format}}"
+                                            ng-model="filter.value2" is-open="filter.datePicker.opened2" datepicker-options="filter.datePicker.option2"
+                                            date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" alt-input-formats="altInputFormats"
+                                            datepicker-mode="{{filter.datePicker.option2.minMode}}" datepicker-append-to-body="true"
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div ng-switch-when="timepicker">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <select ng-options="opt.value as opt.name for opt in filterOpt.time | filter:operatorFilter(filter)" ng-model="filter.operator"
+                                        ng-change="filterOperatorChange(filter)">
+                                    </select>
+                                </div>
+                                <div class="row">
+                                    <label ng-show="filter.operator=='between'" for="inputPassword3" class="col-sm-2 control-label">From:</label>
+                                    <div class="col-md-12" ng-class="{'col-md-10':(filter.operator=='between'), 'col-md-12':(filter.operator!='between')}">
+
+                                        <div moment-picker="filter.value" format="hh:mm A">
+                                            <i class="glyphicon glyphicon-time"></i>&nbsp; {{ filter.value || "Pick any time" }}
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--show this box on between selection-->
+                                <div class="row" ng-show="filter.operator=='between'">
+                                    <label for="inputPassword3" class="col-sm-2 control-label">To:</label>
+                                    <div class="col-md-10">
+                                        <div moment-picker="filter.value2" format="hh:mm A" min-date="filter.value">
+                                            <i class="glyphicon glyphicon-time"></i>&nbsp; {{ filter.value2 || "Pick any time" }}
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
