--- a/src/app/common/components/filterBox/filterBox.html
+++ b/src/app/common/components/filterBox/filterBox.html
@@ -10,10 +10,10 @@
                 <div class="input-group input-group-sm">
                     <input type="text" class="form-control" placeholder="Search Filter" ng-model="filterSearchText">
                     <span class="input-group-btn">
-                                <button class="btn btn-default" type="button" ng-click="showSearchFilter=false">
-                                    <i class="ion-close"></i>
-                                </button>
-                        </span>
+                        <button class="btn btn-default" type="button" ng-click="showSearchFilter=false">
+                            <i class="ion-close"></i>
+                        </button>
+                    </span>
                 </div>
             </div>
         </div>
@@ -23,11 +23,22 @@
 
         <ul class="list-unstyled filters filter-panel">
             <li ng-repeat="filter in page.pageinfo.filters|filter: {displayName: filterSearchText}">
-                <label class="checkbox-inline custom-checkbox nowrap">
+                <div class="row">
+                    <div class="col-md-8">
+                        <label class="checkbox-inline custom-checkbox nowrap">
                             <input type="checkbox" id="inlineCheckbox01" ng-model="filter.showFilter">
                             <span>{{filter.displayName}}</span>
-                            
-                </label>
+                        </label>
+                    </div>
+                    <div class="col-md-4" ng-show="filter.showFilter">
+                        <a ng-show="(filter.operator)" href class="pull-left" title="{{filter.selectedOpt.name}}" popover-animation="true" uib-popover-html="filter.selectedOpt.name"
+                            popover-trigger="manual" popover-is-open="filter.showPop" popover-placement="{{($index==0)?'bottom': ($index==page.pageinfo.filters.length-1)?'top':'left'}}"
+                            ng-mouseover="filter.showPop=true" ng-mouseleave="filter.showPop=false">[{{filter.operator}}]</a>
+                        <select class="pull-right" style="width:20px" ng-options="opt.name for opt in getFilterOpt(filter)" ng-model="filter.selectedOpt"
+                            ng-change="filter.operator=filter.selectedOpt.value">
+                        </select>
+                    </div>
+                </div>
                 <div class="filter-box" ng-show="filter.showFilter">
                     <div ng-switch on="filter.controlType" class="col-md-offset-1">
                         <div ng-switch-when="textbox">
@@ -37,14 +48,16 @@
                         </div>
                         <div ng-switch-when="select">
                             <div class="row">
-                                <label class="checkbox-inline custom-checkbox nowrap">
-                                    <input type="checkbox" id="inlineCheckbox01" value="option1" ng-model="filter.isMultiple">
+                                <div class="col-md-offset-1">
+                                    <label class="checkbox-inline custom-checkbox nowrap">
+                                    <input type="checkbox" id="inlineCheckbox01"  
+                                    ng-model="filter.isMultiple">
                                     <span>Multiple</span>
                                 </label>
+                                </div>
                             </div>
-                            <select ng-options="opt.value as opt.name for opt in filterOpt.select" ng-model="filter.operator">
-                                    </select>
-                            <select ng-options="opt.value as opt.name for opt in filter.titleMap" ng-model="filter.value">
+                            <select ng-options="opt.value as opt.name for opt in filter.titleMap"
+                             ng-model="filter.value">
                                     </select>
                         </div>
                         <div ng-switch-when="datepicker">
@@ -72,16 +85,8 @@
                             </div>
                             <div ng-show="filter.datePicker.option1.minMode">
                                 <div class="row">
-                                    <div class="col-md-12">
-                                        <select ng-options="opt.value as opt.name for opt in filterOpt.date | filter:operatorFilter(filter)" ng-model="filter.operator"
-                                            ng-change="filterOperatorChange(filter)">
-                                    </select>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <label ng-show="filter.operator=='between'" for="inputPassword3" class="col-sm-2 control-label">From:</label>
-                                    <div class="col-md-12" ng-class="{'col-md-10':(filter.operator=='between'), 'col-md-12':(filter.operator!='between')}">
+                                    <label ng-show="filter.operator=='/b'" for="inputPassword3" class="col-sm-2 control-label">From:</label>
+                                    <div class="col-md-12" ng-class="{'col-md-10':(filter.operator=='/b'), 'col-md-12':(filter.operator!='/b')}">
                                         <input ng-click="filter.datePicker.opened1 = true" ng-readonly="true" type="text" uib-datepicker-popup="{{filter.datePicker.format}}"
                                             ng-model="filter.value" is-open="filter.datePicker.opened1" datepicker-options="filter.datePicker.option1"
                                             date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" alt-input-formats="altInputFormats"
@@ -90,7 +95,7 @@
                                     </div>
                                 </div>
                                 <!--show this box on between selection-->
-                                <div class="row" ng-show="filter.operator=='between'">
+                                <div class="row" ng-show="filter.operator=='/b'">
                                     <label for="inputPassword3" class="col-sm-2 control-label">To:</label>
                                     <div class="col-md-10">
                                         <input ng-click="filter.datePicker.opened2 = true" ng-readonly="true" type="text" uib-datepicker-popup="{{filter.datePicker.format}}"
@@ -104,26 +109,23 @@
                         </div>
                         <div ng-switch-when="timepicker">
                             <div class="row">
-                                <div class="col-md-12">
-                                    <select ng-options="opt.value as opt.name for opt in filterOpt.time | filter:operatorFilter(filter)" ng-model="filter.operator"
-                                        ng-change="filterOperatorChange(filter)">
-                                    </select>
-                                </div>
                                 <div class="row">
-                                    <label ng-show="filter.operator=='between'" for="inputPassword3" class="col-sm-2 control-label">From:</label>
-                                    <div class="col-md-12" ng-class="{'col-md-10':(filter.operator=='between'), 'col-md-12':(filter.operator!='between')}">
+                                    <label ng-show="filter.operator=='/b'" for="inputPassword3" class="col-sm-2 control-label">From:</label>
+                                    <div class="col-md-12" ng-class="{'col-md-10':(filter.operator=='/b'), 'col-md-12':(filter.operator!='/b')}">
 
                                         <div moment-picker="filter.value" format="hh:mm A">
-                                            <i class="glyphicon glyphicon-time"></i>&nbsp; {{ filter.value || "Pick any time" }}
+                                            <i class="glyphicon glyphicon-time"></i>&nbsp; {{ filter.value || "Pick any time"
+                                            }}
                                         </div>
                                     </div>
                                 </div>
                                 <!--show this box on between selection-->
-                                <div class="row" ng-show="filter.operator=='between'">
+                                <div class="row" ng-show="filter.operator=='/b'">
                                     <label for="inputPassword3" class="col-sm-2 control-label">To:</label>
                                     <div class="col-md-10">
                                         <div moment-picker="filter.value2" format="hh:mm A" min-date="filter.value">
-                                            <i class="glyphicon glyphicon-time"></i>&nbsp; {{ filter.value2 || "Pick any time" }}
+                                            <i class="glyphicon glyphicon-time"></i>&nbsp; {{ filter.value2 || "Pick any
+                                            time" }}
                                         </div>
                                     </div>
                                 </div>
