--- a/src/app/common/components/fieldBox/fieldBox.html
+++ b/src/app/common/components/fieldBox/fieldBox.html
@@ -39,20 +39,32 @@
                 <i class="glyphicon glyphicon-time"></i>&nbsp; {{ entity[col.name] || "Pick any date" }}
             </div>-->
 
-            <div class="input-group" moment-picker="entity[col.name]" format="DD-MM-YYYY">
+            <div class="input-group" moment-picker="entity[col.name]" format="DD-MMM-YYYY">
                 <span class="input-group-addon">
                     <i class="fa fa-calendar"></i>
                 </span>
-                <input type="date" class="form-control" placeholder="Select a date" ng-model="entity[col.name]" 
-                ng-model-options="{ updateOn: 'blur' }">
+                <input valid-text ng-column="col" ng-readonly="true" class="form-control" placeholder="Select a date"
+                 ng-model="entity[col.name]"
+                    ng-model-options="{ updateOn: 'blur' }">
             </div>
 
         </div>
         <!--timepicker-->
         <div ng-switch-when="timepicker">
-            <div id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" moment-picker="entity[col.name]" format="hh:mm A">
-                <i class="glyphicon glyphicon-time"></i>&nbsp; {{ entity[col.name] || "Pick any time" }}
+
+            <div class="input-group" moment-picker="entity[col.name]" format="hh:mm A">
+                <span class="input-group-addon">
+                    <i class="fa fa-clock-o"></i>
+                </span>
+                <input valid-text ng-column="col" ng-readonly="true" class="form-control" placeholder="Pick any time"
+                     ng-model="entity[col.name]"
+                    ng-model-options="{ updateOn: 'blur' }">
             </div>
+
+            <!--<div id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" moment-picker="entity[col.name]" 
+            format="hh:mm A">
+                <i class="glyphicon glyphicon-time"></i>&nbsp; {{ entity[col.name] || "Pick any time" }}
+            </div>-->
         </div>
         <!--datetimepicker-->
         <div ng-switch-when="datetimepicker" ng-switch-when-separator="|">
